# msoffice-to-pdf

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/msoffice2pdf/: __init__.py
